--- a/www/lib/ionic/scss/_variables.scss
+++ b/www/lib/ionic/scss/_variables.scss
@@ -16,8 +16,8 @@ $dark:                            #444 !default;
 // Base
 // -------------------------------
 
-$font-family-sans-serif:          "Helvetica Neue", "Roboto", sans-serif !default;
-$font-family-light-sans-serif:    "HelveticaNeue-Light", "Roboto-Light", sans-serif-light !default;
+$font-family-sans-serif:          "Avenir", "Roboto", sans-serif !default;
+$font-family-light-sans-serif:    "Avenir-Light", "Roboto-Light", sans-serif-light !default;
 $font-family-serif:               serif !default;
 $font-family-monospace:           monospace !default;
 
