--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -19,5 +19,6 @@ $dark:                            #444 !default;
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 @import 'mixins';
 @import 'typography';
+@import 'birthday-modal';
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
