--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -14,6 +14,46 @@ $assertive:                       #ef473a !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
+#happy-birthday {
+  background-image: url('../img/birthday-bg.png');
+  background-size: cover; }
+
+.birthday-content {
+  height: 100%;
+  /*Flexbox vertical-align*/
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap; }
+
+.cake-img {
+  width: 80%;
+  height: 0%;
+  padding-top: 80%;
+  background-image: url('../img/cake.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 3rem auto; }
+
+.name {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  padding: 60% 25% 0% 25%; }
+
+.name h2, .name h3 {
+  color: yellow; }
+
+/*send button container*/
+.send-btns {
+  width: 100%;
+  text-align: center;
+  color: white; }
+
 /*!
   Ionicons, v1.5.2
   Created by Ben Sperry for the Ionic Framework, http://ionicons.com/
