created additional pages and screenshots

--- a/www/templates/ship.html
+++ b/www/templates/ship.html
@@ -15,9 +15,9 @@
 					<h3>{{activeContact.month}}/{{activeContact.day}}</h3>
 				</div>
 				<div class="send-btns">
-					<button ng-click="openShippingInfo()">Send them gifts now!</button>
+					<button ng-click="openShippingInfo()">Send a gift now!</button>
 					<p>or</p>
-					<button>send them a video!</button>
+					<button ng-click="sendEmailModal()">Send a email!</button>
 				</div>
 			</div>
 	    	<!-- <h2>Step 1: Get shipping estimate</h2>
